# telecaster

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: autolocker.yml  ci.yml
examples/: detect_overlapping_cidr_blocks.cpp  ip_to_binary.cpp  longest_prefix_match.cpp  merge_cidr_blocks.cpp
include/telecaster/: telecaster.hpp
src/: telecaster.cpp
